# ImgAttck

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  evaluate.yaml  multi_prompt.yaml
scripts/: slurm_imgattck.sh
src/imgattck/: __init__.py  __main__.py  artifacts.py  cli.py  config.py  eval_viewer.py  evaluation.py  experiments.py  images.py  losses.py  modeling.py  preprocess.py  prompting.py  tokens.py
tests/: test_config.py  test_eval_viewer.py  test_evaluation.py  test_losses.py  test_preprocess.py  test_prompting.py  test_tokens.py
