[project]
name = "imgattck"
version = "0.1.0"
description = "Image optimization framework for studying VLM token distributions"
readme = "README.md"
authors = [
    { name = "cycileo", email = "roccileonardo0@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "streamlit>=1.57.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "transformers",
]

[project.scripts]
imgattck = "imgattck.cli:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git" }

[tool.pytest.ini_options]
markers = [
    "integration: requires the real Qwen model and enough accelerator/host memory",
]
